# dbinfer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTEXT.md  CPPLINT.cfg  README.md  masterresume.md
grammars/: json.gbnf
src/: CMakeLists.txt  args.cpp  args.hpp  main.cpp  try.hpp
src/backend/: backend.cpp  backend.hpp  metal_backend.hpp  metal_backend.mm
src/dbmf/: dbmf.cpp  dbmf.hpp  huffman.cpp  huffman.hpp  xxhash.cpp  xxhash.hpp
src/gguf/: gguf.cpp  gguf.hpp  mmap_file.cpp  mmap_file.hpp  reader.hpp
src/grammar/: grammar.cpp  grammar.hpp
src/model/: model.cpp  model.hpp  speculative.cpp  speculative.hpp
src/sample/: sample.cpp  sample.hpp
src/tensor/: cpu.cpp  cpu.hpp  dequant.cpp  dequant.hpp  matmul.cpp  matmul.hpp  matmul_neon.cpp  matmul_neon.hpp  ops.cpp  ops.hpp  tensor.hpp  thread_pool.cpp  thread_pool.hpp
src/tokenizer/: bpe.cpp  tokenizer.cpp  tokenizer.hpp  unicode.cpp  unicode.hpp  unicode_data.inc
tests/: CMakeLists.txt  accel_matmul_test.cpp  args_test.cpp  chunked_prefill_test.cpp  dbmf_convert_test.cpp  dequant_test.cpp  gguf_test.cpp  golden_reload_test.cpp  grammar_test.cpp  int8_dot_test.cpp  kv_int8_test.cpp  kv_prefix_cache_test.cpp  kv_ring_test.cpp  matvec_determinism_test.cpp  metal_gemm_test.cpp  metal_head_test.cpp  metal_matmul_test.cpp  metal_ops_test.cpp  metal_quant_test.cpp  model_test.cpp  ops_test.cpp  quant_logits_test.cpp  sample_test.cpp  sha256.hpp  simd_matvec_test.cpp  speculative_test.cpp  tensor_matmul_test.cpp  test_util.hpp  thread_pool_test.cpp  tokenizer_test.cpp
tests/golden/: manifest.json  manifest_generated.hpp
tests/tokenizer/: CPPLINT.cfg  fixture_generated.hpp
tools/: CMakeLists.txt  LLAMACPP_VERSION  bench.cpp  build_llamacpp.sh  dump_reference.py  gen_tokenizer_fixture.py  gguf_dump_tool.cpp  gguf_shapes_check.sh  gguf_to_dbmf.cpp  grammar_json_gen.cpp  parity_check.sh  parity_prompts.txt  requirements.txt  setup_venv.sh
